@@ -172,6 +172,7 @@ WIDGET_DEFAULT = {
         "position_x": 57,
         "position_y": 98,
         "opacity": 0.9,
+        "layout": 1,
         "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
@@ -189,6 +190,7 @@ WIDGET_DEFAULT = {
         "font_color_elevation": "#FFFFFF",
         "bkg_color_elevation": "#222222",
         "show_odometer": True,
+        "odometer_maximum_digits": 8,
         "font_color_odometer": "#FFFFFF",
         "bkg_color_odometer": "#222222",
         "meters_driven": 0,
